--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 			<template>
 				<h2>Paper header</h2>
 				<paper-helper>
-					Try to relax a bit
+					I'd say: Try to relax a bit
 				</paper-helper>
 
 				<h2>Paper header sheet</h2>
@@ -25,7 +25,7 @@
 					on-paper-helper-sheet-open="open"
 					on-paper-helper-sheet-close="close"
 				>
-					Try to relax a bit
+					I'd say: Try to relax a bit
 				</paper-helper-sheet>
 
 				<script>
