Add refences to demo

--- a/collaborne-helper-sheet.html
+++ b/collaborne-helper-sheet.html
@@ -16,6 +16,8 @@
 
 <!--
 Sheet that rests at the bottom of the page, to be opened when the user needs help
+
+@demo demo/index.html
 -->
 <dom-module id="paper-helper-sheet">
 	<template>
