Simplify integration paper-helper
Absolute position allows the caller to position the element within its viewarea (which might not reach to the bottom of the page)

--- a/paper-helper-sheet.html
+++ b/paper-helper-sheet.html
@@ -22,7 +22,7 @@ Sheet that rests at the bottom of the page, to be opened when the user needs hel
 			.open-button,#sheet {
 				background: var(--paper-grey-300);
 				color: var(--paper-grey-700);
-				position: fixed;
+				position: absolute;
 				left: 0;
 				right: 0;
 				bottom: 0;
